# ikg_v2_public

./: .gitattributes  .gitignore  .polyaxonignore  README.md  build_ext.sh  clean_ray.sh  data_hash.txt  docker-compose.yml  environment.yml  freeze.sh  results.csv  run_docker.sh  setup.py  tensorboard_clean.sh
configs/abalation_study/: w_biokg_disease_ontology_const_no_hp.yaml  wo_biokg_complex_const_no_hp.yaml  wo_biokg_disease_const_no_hp.yaml  wo_biokg_pathways_const_no_hp.yaml  wo_go_bp_const_no_hp.yaml  wo_go_const_no_hp.yaml  wo_go_mf_const_no_hp.yaml  wo_pro_const_no_hp.yaml
configs/feature_analysis/: biokg_complex_adaptive.yaml  biokg_complex_const_no_hp.yaml  biokg_disease_adaptive.yaml  biokg_disease_const_no_hp.yaml  biokg_disease_ontology_const_no_hp.yaml  biokg_pathway_adaptive.yaml  biokg_pathway_const_no_hp.yaml  go_bp_adaptive_adaptive.yaml  go_bp_const_no_hp.yaml  go_mf_adaptive_adaptive.yaml  go_mf_const_no_hp.yaml  pro_adaptive.yaml  pro_const_no_hp.yaml
configs/hetero_embedding/: conv_kv_embedder_adaptive.yaml  conv_kv_embedder_const.yaml  deep_walk_embedder_adaptive.yaml  deep_walk_embedder_cbow_adaptive.yaml  deep_walk_embedder_cbow_const.yaml  deep_walk_embedder_const.yaml  deep_walk_embedder_const_mul_seed.yaml  (+19 more)
csrc/: build_index.h  init.cpp
docker/: Dockerfile  build.sh  pyproject.toml  requirements.in  requirements.txt
polyaxon_configs/: abalation_study_compare.yml  feature_analysis_compare.yml  hetero_embedding_compare.yml  linear_tune.yml  make_predictions.yml  negative_sampler_compare.yml  rf_tune.yml  svm_tune.yml
src/: main.py
(+102 files in other folders)
