[tool.poetry]
name = "ikg_v2"
version = "0.2.0"
description = ""
authors = ["Sachin Gavali <saching@udel.edu>"]

[tool.poetry.dependencies]
python = "3.7.10"
pandas = "1.3.2"
tqdm = "4.62.2"
p-tqdm = "1.3.3"
loguru = "0.5.3"
obonet = "0.3.0"
scikit-learn = "0.24.2"
networkx = "2.6.2"
scipy = { version = "^1.7.1", python = ">=3.7" }
guildai = "0.7.3"
knockknock = "^0.1.8"
matplotlib = "^3.4.3"
plotly = "^5.3.0"
kaleido = "0.2.1"
determined = "0.17.1"
ray = {extras = ["default"], version = "^1.6.0"}
polyaxon = "^1.11.2"
optuna = "^2.9.1"
pybind11 = "2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
